--- a/templates/fragments/_footer.html.twig
+++ b/templates/fragments/_footer.html.twig
@@ -1,3 +1,5 @@
 <footer>
-    &copy; Bucket-List {{  "now" | date('Y') }}
+    <div class="container">
+        &copy; Bucket-List {{ "now" | date('Y') }}
+    </div>
 </footer>
