--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,9 @@
         </h1>
     </div>
     <nav class="header-nav">
-        <a href="{{ path('main_index') }}">Home</a>
+        <a href="{{ path('main_index') }}">Maison</a>
+        <a href="{{ path('wish_list') }}">Tous les souhaits</a>
+        <a href="{{ path('main_about_us') }}">A propos de nous</a>
     </nav>
 </header>
 <main>
