--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,6 +53,19 @@ main h2 {
     margin-top: 0;
 }
 
+main a {
+    color: #8c6956;
+}
+
+.wishes-list article {
+    margin-bottom: 0.5rem;
+}
+
+.wish-credit {
+    font-size: .9rem;
+    font-style: italic;
+}
+
 main {
     flex: 1;
     padding: 1rem 0;
@@ -63,4 +76,35 @@ footer {
     padding: 2rem 0;
     text-align: center;
     background-color: #EDDCD2;
+}
+
+.team-members article {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0;
+}
+
+.team-members article img {
+    width: 210px;
+    border-radius: 50%;
+    margin: auto;
+}
+
+@media screen and (min-width: 680px) {
+    .team-members article {
+        flex-direction: row;
+    }
+
+    .team-members article:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
+
+    .team-members article img {
+        margin-right: 20px;
+    }
+
+    .team-members article:nth-child(odd) img {
+        margin-right: 0;
+        margin-left: 20px;
+    }
 }
