--- a/templates/main/aboutus.html.twig
+++ b/templates/main/aboutus.html.twig
@@ -5,15 +5,32 @@
 {% endblock %}
 
 {% block body %}
-    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa deleniti dignissimos id illum incidunt nobis
-        odio quidem quis quisquam totam. Deserunt dolorem esse, perferendis quaerat quis unde vitae voluptas? A.
-    </div>
-    <div>A blanditiis commodi consectetur cupiditate dolor dolore earum, enim excepturi explicabo fugiat harum id iusto,
-        laudantium maiores maxime nihil officiis omnis provident quia ratione sapiente similique tempore temporibus
-        ullam vero?
-    </div>
-    <div>Aliquid corporis excepturi fuga minus nam omnis soluta voluptates. Consequuntur deserunt est eum id illo maxime
-        nam repellendus unde velit voluptate! Accusantium et facilis laudantium necessitatibus odio odit saepe unde.
-    </div>
+    <section class="team-members">
+        {% for chaqueMembre in team %}
+            <article>
+                <img
+                        src="{{ chaqueMembre.picture }}"
+                        alt="{{ chaqueMembre.lastname }}">
+                <div>
+                    <h3>
+                        {{ chaqueMembre.firstname }}
+                        {{ chaqueMembre.lastname }}
+                        {% if chaqueMembre.lastname == 'Potencier' %}
+                            &#128151;
+                        {% endif %}
+                        <!-- Ternaire -->
+                        {{ chaqueMembre.lastname == 'Potencier' ? "&#128151" : "" }}
+                    </h3>
+                    <p>
+                        Date de naissance :
+                    {{ chaqueMembre.dateOfBirth | date("d-m-Y") }}
+                    </p>
+                    <p>
+                        {{ chaqueMembre.description }}
+                    </p>
+                </div>
+            </article>
+        {% endfor %}
+    </section>
 {% endblock %}
 
