--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <ul>
+        {% for wish in wishes %}
+            <li><a href="#">{{ wish }}</a></li>
+        {% endfor %}
+    </ul>
 {% endblock %}
 
 {% block title %}
