--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -5,6 +5,10 @@
 {% endblock %}
 
 {% block body %}
-
+    <h2>{{ wish.title }}</h2>
+    <p class="wish-credit">Created by {{  wish.author }}
+    on {{ wish.dateCreated | date('Y-m-d') }}.
+    </p>
+    <div>{{ wish.description | nl2br }}</div>
 {% endblock %}
 
