--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -3,7 +3,9 @@
 {% block body %}
     <ul>
         {% for wish in wishes %}
-            <li><a href="#">{{ wish }}</a></li>
+            <li><a href="{{ path('wish_detail', {'id': wish.id}) }}">{{ wish.title }}</a></li>
+        {% else %}
+            <p>Aucun souhait en base de données.</p>
         {% endfor %}
     </ul>
 {% endblock %}
