--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap">
     <link rel="icon" href="{{ asset('img/favicon.png') }}">
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     {% block css %}{% endblock %}
     <title>
         {% block title %}
@@ -19,10 +24,6 @@
         <h1 class="header-logo">
             <a href="{{ path('main_index') }}">
                 <img src="{{ asset('img/logo.png') }}" alt="logo" id="img">
-                <script>
-                    document.getElementById('img').onerror =
-                        () => document.getElementById('img').setAttribute("src", "http://www.google.fr/");
-                </script>
                 Bucket List
             </a>
         </h1>
@@ -34,10 +35,23 @@
     </nav>
 </header>
 <main>
+    <div class="toast" id="liveToast" role="alert">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash-{{ label }} toast-header">
+                    {{ message }}
+                </div>
+                <div class="toast-body">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
     <div class="container">
         {% block body %}{% endblock %}
     </div>
 </main>
 {% include 'fragments/_footer.html.twig' %}
+<script src="{{ asset('js/script.js') }}"></script>
 </body>
 </html>
