--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<p>Ceci est la page d'accueil</p>
+    <div>
+        <p>Ceci est la page d'accueil</p>
+    </div>
 {% endblock %}
 {% block title %}
     {{ parent() }} | HOME
